Update README.md
add examples and explanation